Working tooltips in recipe search with dietary prefernce reasons and javascript alerts

--- a/templates/Final_search_template.html
+++ b/templates/Final_search_template.html
@@ -44,8 +44,13 @@
         {% for diet in party_diets %}  
         <div class="checkbox">
             <label>
-                <input type="checkbox" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
-                {% for guest in party.users %}{% if guest.diet.diet_type == diet %}{{  guest.first_name  }} {{  guest.last_name  }}<br>{% endif %}{% endfor %}
+                <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
+                {% for guest in party.users %}{% if guest.diet.diet_type == diet %}
+
+
+                <a href="#" data-toggle="tooltip" title="Reason: {{  guest.diet_reason}}">
+
+                {{  guest.first_name  }} {{  guest.last_name  }}</a><br>{% endif %}{% endfor %}
             
             </label><br>
         
@@ -56,11 +61,12 @@
         <div class="checkbox">
         {% for intol in party_intols %}                 
             <label>
-                <input type="checkbox" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
+                <input type="checkbox" class="alertme" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
                 {% for guest in party.users %}
                     {% for intolerance in guest.intolerances %}
                      {% if intolerance.intol_name == intol %}
-                        {{  guest.first_name  }} {{  guest.last_name  }}<br>
+                        <a href="#" data-toggle="tooltip" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
+                        {{  guest.first_name  }} {{  guest.last_name  }}</a><br>
                     {% endif %}
                 {% endfor %}    
                 {% endfor %}
@@ -75,13 +81,13 @@
         <div class="checkbox">
         {% for avoid in party_avoids %}                 
             <label>
-                <input type="checkbox" name="avoids" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
+                <input type="checkbox" name="avoids" class="alertme" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
                 {% for guest in party.users %}
                     {% for guestavoid in guest.avoidances %}
                     
                      {% if guestavoid.ingredient == avoid %}
                     
-                        {{  guest.first_name  }} {{  guest.last_name  }}{% if not loop.last %}, {% endif %}
+                         <a href="#" data-toggle="tooltip" title="{{  guestavoid.reason  }}">{{  guest.first_name  }} {{  guest.last_name  }}</a>{% if not loop.last %}, {% endif %}
                     {% endif %}
                 {% endfor %}    
             {% endfor %}
@@ -125,4 +131,21 @@
 </div>
 
 </div>
+
+<script>
+
+
+function alertMe(evt) {
+  alert("Hover over the names listed by the checkbox for reasons why the person has this dietary preference. It may be enough to make a variety of dishes for your guests or the inclusion of some ingredients may be a dealbreaker.");
+}
+$('.alertme').change(alertMe);
+
+
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+});
+
+</script>
+
+
 {% endblock %}
