--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>Kind Table</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/site.css">
+    <script src="/static/tooltip.js"></script>
     <script src="http://code.jquery.com/jquery.js"></script>
 </head>
 
