--- a/static/site.css
+++ b/static/site.css
@@ -28,10 +28,9 @@ padding:0;
 margin:0;
 }
 
-.recipe_results {
-    border: 1px dotted gray;
+/*.recipe_results {
     padding: 30px;
-}
+}*/
 
 .recipe {
   padding: 15px;
@@ -43,7 +42,7 @@ margin:0;
     margin-right: auto }
 
 .display_guest{
-    background-size:50% auto;
+    background-size:10% auto;
     height: 30em;
     width: 100%;
     background:url('/static/plate-blue.jpg') no-repeat center center;
@@ -54,7 +53,7 @@ margin:0;
     font-weight: bold; 
     left: 0;
     text-align:center;
-    margin-top: 120px;
+    margin-top: 140px;
     width: 100%;
 
 }
@@ -63,3 +62,61 @@ margin:0;
     margin: 10px;
 }
 
+.basic_info {
+    width: 300px;
+    height: 100px;
+    background-color: white;
+    box-shadow: 10px 10px 5px #888888;
+}
+
+/*.round_div {
+    border: 2px solid;
+    border-radius: 25px;
+    padding-bottom: 2em;
+    padding-left: 2em;
+    margin-bottom: 1em;
+
+}*/
+/*
+#rcorners1 {
+    border-radius: 25px;
+    background: #73AD21;
+    padding: 20px;
+    width: 200px;
+    height: 150px;
+}*/
+
+.round_div {
+    border: 2px solid;
+    border-radius: 25px;
+    background: #FFEFD5;
+    padding: 20px;
+    margin-bottom: 1em;
+    padding-left: 2em;
+    padding-bottom: 2em;
+}
+
+
+ .round_hidden_div {
+
+    border: 2px solid;
+    border-radius: 25px;
+    background: #00FFFF;
+    padding: 20px;
+    margin-bottom: 1em;
+    padding-left: 2em;
+    padding-bottom: 2em;
+}
+
+
+h1  {
+    text-align: center;
+}
+
+
+.side_column {
+    float:left;
+    overflow-y: auto;
+    max-height:720px;
+
+}
