--- a/templates/Final_search_template.html
+++ b/templates/Final_search_template.html
@@ -3,7 +3,7 @@
 
 <div class="recipe_page"
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-4 side_column">
         <div class="row display_guest">
             <div class="guest_name">
                 <h3>{{ responses.get('number', None) }} Recipes<br>found<br>for<br> <a href="/party_profile/<int:{{ party.party_id  }}>">{{ party.title }}</a></h3>  
@@ -16,136 +16,137 @@
         </div>
 
         <!-- End of recipe search information -->
-<div class="row">                            
-        
-
-    <form class="horizontal" action="/reloadsearchrecipes" method="POST">
-                    
-    <div class="form-group">
-        <label for="sel1">Pick a different cuisine:</label>
-            <select class="form-control" name="cuisine" id="sel1">
-                {% for cuisine in cuisine_list %}
-                <option value="{{  cuisine.cuisine_id  }}"{% if cuisine.cuisine_id==25 %} selected="selected"{% endif %} >{{  cuisine.cuisine_name  }}</option>
-                {% endfor %}        
-            </select>
-    <br> 
-        <label for="sel2">Pick a different course:</label>
-        <select class="form-control" name="course" id="sel2">
-            {% for course in course_list %}
-        <option value="{{ course.course_id  }}"{% if course.course_id==1 %} selected="selected"{% endif %}>{{  course.course_name  }}</option>
-            {% endfor %}
-         </select>
-    </div>
-<hr>
-            <h4>Deselect a food preference:</h4>
-            <p><i>You may need to make more dishes to make sure everyone eats.</i></p>
-        <h4 class="form-control-static">Diets:</h4>
-        
-        {% for diet in party_diets %}  
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
-                {% for guest in party.users %}{% if guest.diet.diet_type == diet %}
+        <div class="row">                            
 
 
-                <a href="#" data-toggle="tooltip" title="Reason: {{  guest.diet_reason}}">
+            <form class="horizontal" action="/reloadsearchrecipes" method="POST">
 
-                {{  guest.first_name  }} {{  guest.last_name  }}</a><br>{% endif %}{% endfor %}
-            
-            </label><br>
-        
-        </div>
-        {% endfor %}
+                <div class="form-group">
+                    <label for="sel1">Pick a different cuisine:</label>
+                    <select class="form-control" name="cuisine" id="sel1">
+                        {% for cuisine in cuisine_list %}
+                        <option value="{{  cuisine.cuisine_id  }}"{% if cuisine.cuisine_id==25 %} selected="selected"{% endif %} >{{  cuisine.cuisine_name  }}</option>
+                        {% endfor %}        
+                    </select>
+                    <br> 
+                    <label for="sel2">Pick a different course:</label>
+                    <select class="form-control" name="course" id="sel2">
+                        {% for course in course_list %}
+                        <option value="{{ course.course_id  }}"{% if course.course_id==1 %} selected="selected"{% endif %}>{{  course.course_name  }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <hr>
+                <h4>Deselect a food preference:</h4>
+                <p><i>You may need to make more dishes to make sure everyone eats.</i></p>
+                <h4 class="form-control-static">Diets:</h4>
+                
+                {% for diet in party_diets %}  
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" class="alertme" name="diets" value="{{  diet }}" checked><strong>{{  diet|capitalize  }}</strong><br>
+                        {% for guest in party.users %}{% if guest.diet.diet_type == diet %}
 
-        <h4 class="form-control-static">Intolerances/Allergies:</h4>
-        <div class="checkbox">
-        {% for intol in party_intols %}                 
-            <label>
-                <input type="checkbox" class="alertme" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
-                {% for guest in party.users %}
-                    {% for intolerance in guest.intolerances %}
-                     {% if intolerance.intol_name == intol %}
-                        <a href="#" data-toggle="tooltip" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
-                        {{  guest.first_name  }} {{  guest.last_name  }}</a><br>
-                    {% endif %}
-                {% endfor %}    
-                {% endfor %}
-            
-            </label><br>
-        {% endfor %}
 
-        </div>
+                        <a href="#" data-toggle="tooltip" title="Reason: {{  guest.diet_reason}}">
 
-
-        <h4 class="form-control-static">Ingredients to omit:</h4>
-        <div class="checkbox">
-        {% for avoid in party_avoids %}                 
-            <label>
-                <input type="checkbox" name="avoids" class="alertme" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
-                {% for guest in party.users %}
-                    {% for guestavoid in guest.avoidances %}
-                    
-                     {% if guestavoid.ingredient == avoid %}
-                    
-                         <a href="#" data-toggle="tooltip" title="{{  guestavoid.reason  }}">{{  guest.first_name  }} {{  guest.last_name  }}</a>{% if not loop.last %}, {% endif %}
-                    {% endif %}
-                {% endfor %}    
-            {% endfor %}
-            
-            </label><br>
-        {% endfor %}
-
-        </div>
-
-                      
-                   <input type="submit" id="recipe-form-submit"value="Click for more variety" class="btn btn-success btn-lg btn-block">                              
-                </form>
-           
-        </div>    
-    </div> <!-- end of left column -->
-
-    <div class="col-md-8 recipe_results">
-
-                {% for i in range(responses.get('number', None)) %}
-    <div class="col-md-6 recipe">
-        <h4>{{ responses['response'][i].get('title') }}</h4>
-            <form action="/see_recipe" method="POST">
-            <input type="hidden" name="intols" value="{{  intols  }}">
-            <input type="hidden" name="cuisine" value="{{  cuisine  }}">
-            <input type="hidden" name="course" value="{{  course  }}">
-             <input type="hidden" name="newdiets" value="{{  newdiets  }}">
-             <input type="hidden" name="avoids" value="{{  avoids  }}">
-            <input type="hidden" name="recipe_id" value="{{ responses['response'][i].get('recipe_id') }}">
-            <input type="hidden" name="title" value="{{ responses['response'][i].get('title') }}">
-            <input type="hidden" name="recipe_image_url" value="{{ responses['response'][i].get('image_url') }}">
-            <input type="hidden" name="recipe_url" value="{{ responses['response'][i].get('recipe_url') }}">
-            <button>View recipe</button>
-            </form>
-        
-        <img src="{{ responses['response'][i].get('image_url') }}" class="img-circle displayed" width="250" height="250">
+                            {{  guest.first_name  }} {{  guest.last_name  }}</a><br>{% endif %}{% endfor %}
+                            
+                        </label><br>
                         
-    </div>
+                    </div>
                     {% endfor %}
 
+                    <h4 class="form-control-static">Intolerances/Allergies:</h4>
+                    <div class="checkbox">
+                        {% for intol in party_intols %}                 
+                        <label>
+                            <input type="checkbox" class="alertme" name="intols" value="{{  intol }}" checked><strong>{{  intol|capitalize  }}</strong><br>
+                            {% for guest in party.users %}
+                            {% for intolerance in guest.intolerances %}
+                            {% if intolerance.intol_name == intol %}
+                            <a href="#" data-toggle="tooltip" title="No reasons are collected for Intolerances/Allergies because the reason is always the same, these things will make your guest very sick. Tread carefully. It may be enough to have seperate dishes and it may not.">
+                                {{  guest.first_name  }} {{  guest.last_name  }}</a><br>
+                                {% endif %}
+                                {% endfor %}    
+                                {% endfor %}
+                                
+                            </label><br>
+                            {% endfor %}
 
-</div>
-
-</div>
-
-<script>
+                        </div>
 
 
-function alertMe(evt) {
-  alert("Hover over the names listed by the checkbox for reasons why the person has this dietary preference. It may be enough to make a variety of dishes for your guests or the inclusion of some ingredients may be a dealbreaker.");
-}
-$('.alertme').change(alertMe);
+                        <h4 class="form-control-static">Ingredients to omit:</h4>
+                        <div class="checkbox">
+                            {% for avoid in party_avoids %}                 
+                            <label>
+                                <input type="checkbox" name="avoids" class="alertme" value="{{  avoid }}" checked><strong>{{  avoid|capitalize  }}</strong><br>
+                                {% for guest in party.users %}
+                                {% for guestavoid in guest.avoidances %}
+                                
+                                {% if guestavoid.ingredient == avoid %}
+                                
+                                <a href="#" data-toggle="tooltip" title="{{  guestavoid.reason  }}">{{  guest.first_name  }} {{  guest.last_name  }}</a>{% if not loop.last %}, {% endif %}
+                                {% endif %}
+                                {% endfor %}    
+                                {% endfor %}
+                                
+                            </label><br>
+                            {% endfor %}
+
+                        </div>
+
+                        
+                        <input type="submit" id="recipe-form-submit"value="Click for more variety" class="btn btn-success btn-lg btn-block">                              
+                    </form>
+                    
+                </div>    
+            </div> <!-- end of left column -->
 
 
-$(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();
-});
+            <div class="col-md-8 recipe_results side_column">
 
-</script>
+                {% for i in range(responses.get('number', None)) %}
+                <div class="col-md-6 recipe">
+                    <h4><a href="#" data-toggle="tooltip" title="{{  responses['response'][i].get('title')  }}" >{{  responses['response'][i].get('title')|truncate(34, end=" (...)") }}</a></h4>
+                    <form action="/see_recipe" method="POST">
+                        <input type="hidden" name="intols" value="{{  intols  }}">
+                        <input type="hidden" name="cuisine" value="{{  cuisine  }}">
+                        <input type="hidden" name="course" value="{{  course  }}">
+                        <input type="hidden" name="newdiets" value="{{  newdiets  }}">
+                        <input type="hidden" name="avoids" value="{{  avoids  }}">
+                        <input type="hidden" name="recipe_id" value="{{ responses['response'][i].get('recipe_id') }}">
+                        <input type="hidden" name="title" value="{{ responses['response'][i].get('title') }}">
+                        <input type="hidden" name="recipe_image_url" value="{{ responses['response'][i].get('image_url') }}">
+                        <input type="hidden" name="recipe_url" value="{{ responses['response'][i].get('recipe_url') }}">
+                        <button>View recipe</button>
+                    </form>
+                    
+                    <img src="{{ responses['response'][i].get('image_url') }}" class="img-circle displayed" width="250" height="250">
+                    
+                </div>
+                {% endfor %}
 
 
-{% endblock %}
+            </div>
+
+        </div>
+
+        <script>
+
+
+        function alertMe(evt) {
+          alert("Hover over the names listed by the checkbox for reasons why the person has this dietary preference. It may be enough to make a variety of dishes for your guests or the inclusion of some ingredients may be a dealbreaker.");
+      }
+      $('.alertme').change(alertMe);
+
+
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+
+      </script>
+
+
+      {% endblock %}
