--- a/templates/friends_profile_page.html
+++ b/templates/friends_profile_page.html
@@ -1,207 +1,189 @@
 
 {% extends 'base.html' %}
 {% block content %}
-<div class="well spaced">
-<h1>Friend Profile: 
-
-      {% if newfriend.first_name is not none %}
-            {{ newfriend.first_name }}
-                      {% else %}
-                    {{  newfriend.email  }}
-                         {%endif %}
-
-         {% if newfriend.last_name is not none %}
-            {{ newfriend.last_name }}
-                      {% else %}
-                    
-                         {%endif %}
-
- <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#userchange">update</button></h1>
-
+<div class="row well spaced" style="padding-top: 3em">
+    <div class="col-md-6 col-md-offset-3">
+        <div class="row">
+            <h1>Friend Profile: {% if newfriend.first_name is not none %}{{ newfriend.first_name }}{% else %}{{  newfriend.email  }}{%endif %} {% if newfriend.last_name is not none %}{{ newfriend.last_name }}{%endif %}</h1>
+        </div>
     
 
-    <!-- Modal -->
-    <div id="userchange" class="modal fade" role="dialog">
-         <div class="modal-dialog">
 
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Update Basic Profile Information</h4>
-                </div>
-                      <div class="modal-body">
-                        <form action="/changefrienduserinfo" method="POST">
-                            <input type="hidden" name="friend_id" value="{{ newfriend.user_id  }}">
-
-
-    <div class="form-group">
-        <label>
-
-            <strong>Email address</strong> (required): <input type="text" name="email" value="{{ newfriend.email }}" class="form-control" required>
-        
-                Friend's first name (optional):
-                <input type="text" name="first_name" class="form-control" value="{% if newfriend.first_name is not none %}{{ newfriend.first_name }}{% else %}{%endif %}">
-      
-                Friend's last name (optional):
-                <input type="text" name="last_name" class="form-control" value="{% if newfriend.last_name is not none %}{{ newfriend.last_name }}{% else %}{%endif %}">
-
-
-                <p>Diet your friend prefers to eat (required):</p>
-                
-                <select name="diet_type">
-                    {% for diet in diets %}
-                    <option value={{ diet.diet_id }}>{{ diet.diet_type }}</option>
-                    {% endfor %}
-                </select><br>
-                Reason they follow this diet (optional):<br>
-                <input type="text" name="diet_reason" class="form-control" value="{% if newfriend.diet_reason is not none %}{{ newfriend.diet_reason }}{% else %}{%endif %}">
-
-                  
-            </div><br>
-            <div class="form-group">
-                <input type="submit" value="update friend profile" class="btn">
-            </div>
-        </label>
-    </div>
-</form>
-                      </div>
-
-            </div>
-
+    <div class = "row round_div" style="padding-top: 2em">
+        <div class="col-md-3">
+            <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#userchange">update<br>basic<br>info</button>
+        </div>
+        <div class="col-md-6">
+            First name: {{ newfriend.first_name }}<br>
+            Last name: {{ newfriend.last_name }}<br>
+            Email address: {{ newfriend.email }}<br>
+            Diet: {{ newfriend.diet.diet_type }}<br>
+            Diet Reason: {{ newfriend.diet_reason }}<br>
         </div>
     </div>
-</li>
 
 
-<ul>
-    <li>First name: {{ newfriend.first_name }} 
-    <li>Last name: {{ newfriend.last_name }} 
-    <li>Email address: {{ newfriend.email }} 
-    <li>Diet: {{ newfriend.diet.diet_type }}
-    <li>Diet Reason: {{ newfriend.diet_reason }}
-    <li>Intolerances:</li>
-        <ul>
-            <div id="userIntolerances">
-                <li>{% for intolerance in newfriend.intolerances %}
-                    {{ intolerance.intol_name }}
-                    {% if not loop.last %}
-                        ,
-                    {% endif %}
-                    {% endfor %}</li>
-                
-            </div>
-
-           
-
-    <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#Intols">Add an intolerance/allergies</button>
-
-    <!-- Modal -->
-    <div id="Intols" class="modal fade" role="dialog">
-         <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Add intolerances/allergies</h4>
-                </div>
-                      <div class="modal-body">
-                        <form action="/friendintolerance_added" method="POST">
-                            <div class="form-group">
-                                <label>
-                                    <input type="hidden" name="friend_id" value="{{ newfriend.user_id  }}">
-                                    <p>Select all that apply:</p>
-                                            {% for intolerance in intol_list %}  
-                                        <input type="checkbox" name="intol_ids" value={{ intolerance.intol_id }}>   {{ intolerance.intol_name }}  
-                                            {% endfor %}
-                                        <br>
-
-                                </label>
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" value="Done" class="btn" id="intolDone">
-                            </div>
-                        </form>
-                      </div>
-
-            </div>
-
+    <div class = "row round_div" style="padding-top: 2em">
+        <div class="col-md-3">
+            <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#Intols">add an<br>intolerance/<br>allergy</button>
+        </div>
+        <div class="col-md-6">
+            Intolerances:
+            <ul>    
+                <li>{% for intolerance in newfriend.intolerances %}{{ intolerance.intol_name }}{% if not loop.last %}, {% endif %}{% endfor %}</li>
+            </ul>
         </div>
     </div>
-</li>
-
-
-
-
-
-        </ul>
-    <li>Ingredients to avoid:</li>
-        <ul>
+                         
+    <div class = "row round_div" style="padding-top: 2em">
+        <div class="col-md-3">
+            <button type="button" class="btn btn-info btn-block" data-toggle="modal" data-target="#IngToAvoid">add<br>ingredients<br>to avoid</button>
+        </div>
+        <div class="col-md-6">
+            Ingredients to avoid:
+            <ul>
                 {% for avoid in newfriend.avoidances %}
-            <li>{{ avoid.ingredient }} (<i>{{ avoid.reason}}</i>)</li>
+                <li>{{ avoid.ingredient }} - (<i>{{ avoid.reason}}</i>)</li>
                 {% endfor %}
-            
-            <li style="list-style-type:none">
+            </ul>
+        </div>
+    </div>  
+                            
+    <div class = "row round_div" style="padding-top: 2em">
+        <div class="col-md-6 col-md-offset-3">
+            Parties invited to:
+                <ul>
+                    {% for party in parties %}
+                    <li><a href="/party_profile/{{ party.party_id}}">{{  party.title  }}</a></li>
+                    {% endfor %}
+                </ul>
+        </div>
+    <div>
 
-    <button type="button" class="btn btn-info btn-xs" data-toggle="modal" data-target="#IngToAvoid">Add ingredients your friend would like to avoid</button>
 
     <!-- Modal -->
     <div id="IngToAvoid" class="modal fade" role="dialog">
-         <div class="modal-dialog">
-
+       <div class="modal-dialog">
             <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Add ingredients your friend would like to avoid</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Add ingredients your friend would like to avoid</h4>
                 </div>
-                      <div class="modal-body">
+                <div class="modal-body">
                     <form action="/friendingredientadded" method="POST">
                         <div class="form-group">
                             <label>
                                 <input type="hidden" name="friend_id" value="{{ newfriend.user_id  }}">
                                 <p>Ingredient to avoid:</p>
-                                    <input type="text" name="ingredient" class="form-control">
+                                <input type="text" name="ingredient" class="form-control">
                                 <p>Reason they would like to avoid this ingredient (optional):</p>
-                                    <input type="text" name="reason" class="form-control">
+                                <input type="text" name="reason" class="form-control">
+                                <br>
+                                <input type="submit" value="Done" class="btn" id="avoidDone">
                             </label>
                         </div>
-                        <div class="form-group">
-                            <input type="submit" value="Done" class="btn" id="avoidDone">
-                        </div>
                     </form>
-                      </div>
-
+                </div>
             </div>
-
         </div>
     </div>
-</li>
 
-        </ul> 
-    <li>Parties invited to:</li>
-    <ul>
-        {% for party in parties %}
-        <li><a href="/party_profile/{{ party.party_id}}">{{  party.title  }}</li>
-        {% endfor %}
-    </ul>
+      <!-- Modal -->
+    <div id="userchange" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Update Basic Profile Information</h4>
+                </div>
+                <div class="modal-body">
+                    <form action="/changefrienduserinfo" method="POST">
+                        
+                            <div class="form-group">
+                                <label>Email address (required):</label>
+                                <input type="hidden" name="friend_id" value="{{ newfriend.user_id  }}">
+                                <input type="text" name="email" value="{{ newfriend.email }}" class="form-control" required>
+                            </div>
+                            <br>
+                            <div class="form-group">
+                                <label>Friend's first name (optional):</label>
+                                <input type="text" name="first_name" class="form-control" value="{% if newfriend.first_name is not none %}{{ newfriend.first_name }}{% else %}{%endif %}">
+                            </div> 
+                            <br>
+                            <div class="form-group">   
+                                <label>Friend's last name (optional):</label>
+                                <input type="text" name="last_name" class="form-control" value="{% if newfriend.last_name is not none %}{{ newfriend.last_name }}{% else %}{%endif %}">
+                            </div>
+                            <br>
+                            <div class="form-group"> 
+                                <label>Diet your friend prefers to eat (required):</label>
+                                <select name="diet_type" class="form-control">
+                                    {% for diet in diets %}
+                                 <option value={{ diet.diet_id }}>{{ diet.diet_type }}</option>
+                                     {% endfor %}
+                                 </select>
+                            </div>
+                            <br>
+                            <div class="form-group"> 
+                                <label>Reason they follow this diet (optional):</label>
+                                <input type="text" name="diet_reason" class="form-control" value="{% if newfriend.diet_reason is not none %}{{ newfriend.diet_reason }}{% else %}{%endif %}">
+                            </div>
+                            <br>
+                            <div class="form-group">                     
+                                <input type="submit" value="update friend profile" class="btn btn-info">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-</div>
-<script>
-"use strict";
-    $("#addIntol").click(function(){
-            $("#addIntol").hide();
-            $("#addIntolForm").toggle();
-            console.log("show form");
-    });
 
-    $("#addIngred").click(function(){
-            $("#addIngred").hide();
-            $("#addAvoidForm").toggle();
-            console.log("show form");
-    });
+    <!-- Modal -->
+    <div id="Intols" class="modal fade" role="dialog">
+       <div class="modal-dialog">
 
-</script>
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add intolerances/allergies</h4>
+            </div>
+            <div class="modal-body">
+                <form action="/friendintolerance_added" method="POST">
+                    <div class="form-group">
+                        <label>
+                            <input type="hidden" name="friend_id" value="{{ newfriend.user_id  }}">
+                            <p>Select all that apply:</p>
+                            {% for intolerance in intol_list %}  
+                            <input type="checkbox" name="intol_ids" value={{ intolerance.intol_id }}>   {{ intolerance.intol_name }}  
+                            {% endfor %}
+                            <br>
+                        <input type="submit" value="Done" class="btn" id="intolDone">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
-{% endblock %}
+
+            <script>
+            "use strict";
+            $("#addIntol").click(function(){
+                $("#addIntol").hide();
+                $("#addIntolForm").toggle();
+                console.log("show form");
+            });
+
+            $("#addIngred").click(function(){
+                $("#addIngred").hide();
+                $("#addAvoidForm").toggle();
+                console.log("show form");
+            });
+
+            </script>
+
+            {% endblock %}
