good bootstrappy layout for party profile

--- a/templates/user_profile_page.html
+++ b/templates/user_profile_page.html
@@ -6,7 +6,7 @@
         
         <div class="row">
       
-                <h1>{{  this_user.first_name  }} {{  this_user.last_name  }}</h1>
+                <h1>User Profile: {{  this_user.first_name  }} {{  this_user.last_name  }}</h1>
        
         </div>
         <div class = "row round_div" style="padding-top: 2em">
